[project]
name = "livex2hls-service"
version = "0.1.0"
description = "FastAPI DASH-to-HLS proxy for Flussonic ingest."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.116.0",
    "pydantic-settings>=2.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
