[project]
name = "restreamer"
version = "0.1.0"
description = "Multi-channel restreamer for HLS and TSHTTP outputs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=45.0.0",
    "fastapi[standard]>=0.116.0",
    "pydantic-settings>=2.10.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
